--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "s1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/webpack"
+    "start": "./node_modules/.bin/webpack-dev-server --hot --inline"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,15 @@
   },
   "homepage": "https://github.com/mgrinko/js-20170601-1930#readme",
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.28.4",
+    "handlebars": "^4.0.10",
+    "handlebars-loader": "^1.5.0",
     "raw-loader": "^0.5.1",
+    "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.3.0"
   }
 }
