--- a/package.json
+++ b/package.json
@@ -24,15 +24,14 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.4",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.7.0",
     "handlebars": "^4.0.10",
     "handlebars-loader": "^1.5.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.3.0",
+    "webpack": "^3.3.0"
+  },
+  "devDependencies": {
     "webpack-dev-server": "^2.5.1"
   }
 }
