--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "css-loader": "^0.28.4",
     "handlebars": "^4.0.10",
     "handlebars-loader": "^1.5.0",
+    "html-webpack-plugin": "^2.29.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.3.0"
-  },
-  "devDependencies": {
+    "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
   }
 }
