--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "handlebars": "^4.0.10",
     "handlebars-loader": "^1.5.0",
     "html-webpack-plugin": "^2.29.0",
+    "node-static": "^0.7.9",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
